# flash

./: .gitignore  Jenkinsfile  Jenkinsfile_CC2  Jenkinsfile_oe  build01.sh  deploy.sh  result.txt  test.txt
CC2/: CentralSystem.py  checkCS.sh  deployOCL.sh  startupCentralSystem.sh  test_firmware.sh  updateOCL.sh  updatefirmware.sh  updatesoftwareCCU.sh
CC2/feature/: integration.feature  smoke.feature
CC2/feature/feature/: integration.feature  smoke.feature
CC2/feature/reports/: TESTS-smoke.xml
CC2/feature/steps/: step_state.py  step_update.py
SAMA5D2_flash/: GUIDE_LINE.txt  sama5d2_flash  test
flash_test/SAMA5D2_flash/: SAMA5D2_binary_mode  SAMA5D2_edit_boot.c  log.txt  sama5d2_flash
flash_test/test/: main.cpp
flash_test/test_reports/: test-results.xml
flash_test/tools/sam-ba_v3.7-linux_x86_64/: nandflash-usb.qml
test/: CMakeLists.txt
tools/sam-ba_v3.7-linux_x86_64/: README.txt  nandflash-usb.qmlc  sam-ba
tools/sam-ba_v3.7-linux_x86_64/doc/: applet.html  bootconfig-otp.html  cmdline.html  extram.html  index.html  lowlevel.html  monitor.html  nandflash.html  pairingmode-sam9x60.html  port.html  qml-samba-applet-internalflashconfig.html  qml-samba-applet-lowlevelconfig.html  qml-samba-applet-lowlevelpresetconfig-members.html  qml-samba-applet-lowlevelpresetconfig.html  qml-samba-applet-members.html  qml-samba-applet-nandflashconfig.html  qml-samba-applet-qspiflashconfig-members.html  qml-samba-applet-sdmmcconfig.html  qml-samba-applet-serialconfig.html  qml-samba-applet-serialflashconfig-members.html  qml-samba-applet-serialflashconfig.html  (+53 more)
(+452 files in other folders)
